--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>欢迎页</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="overlay">
-    <div class="content">
-      <h1 class="fade-in">欢迎来到我的网站</h1>
-      <p class="fade-in delay-1">linkones</p>
-      <a href="main.html" class="btn fade-in delay-2">立即进入</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>欢迎页</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="overlay">
+      <div class="content">
+        <h1 class="fade-in">welcome</h1>
+        <div>
+          <img
+            src="img/7b4946b3757727a88d4d1806f4bb6983.png"
+            alt="头像"
+            class="fade-in-delay-1"
+          />
+          <p class="nickname">@linkones</p>
+        </div>
+        <div>code | input | output</div>
+        <a href="main.html" class="btn fade-in delay-2">立即进入</a>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
