--- a/main.html
+++ b/main.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>主页</title>
-  <link rel="stylesheet" href="main.css" />
-</head>
-<body>
-  <header>
-    <div class="header-left">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>主页</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <header>
       <a href="index.html" class="back-btn">← 返回</a>
-      <img src="images/avatar.jpg" alt="头像" class="avatar">
-      <span class="nickname">Linkones</span>
-    </div>
-    <nav class="navbar">
-      <ul>
-        <li><a href="profile.html">个人简介</a></li>
-        <li><a href="blog.html">博客</a></li>
-        <li><a href="projects.html">项目经历</a></li>
-        <li><a href="knowledge.html">知识分享</a></li>
-      </ul>
-    </nav>
-  </header>
+      <nav class="navbar">
+        <ul>
+          <li><a href="profile.html">个人简介</a></li>
+          <li><a href="blog.html">博客</a></li>
+          <li><a href="projects.html">项目经历</a></li>
+          <li><a href="knowledge.html">知识分享</a></li>
+        </ul>
+      </nav>
+      <div class="header-left">
+        <img
+          src="img/7b4946b3757727a88d4d1806f4bb6983.png"
+          alt="头像"
+          class="avatar"
+        />
+        <span class="nickname">linkones</span>
+      </div>
+    </header>
 
-  <main>
-    <section>
-      <h2><a href="profile.html">个人简介</a></h2>
-      <p>了解我的背景和兴趣。</p>
-    </section>
-    <section>
-      <h2><a href="blog.html">博客</a></h2>
-      <p>记录技术成长，分享心得。</p>
-    </section>
-    <section>
-      <h2><a href="projects.html">项目经历</a></h2>
-      <p>展示我的项目和成果。</p>
-    </section>
-    <section>
-      <h2><a href="knowledge.html">知识分享</a></h2>
-      <p>发布实用的编程技巧和资源。</p>
-    </section>
-  </main>
-</body>
+    <main>
+      <section>
+        <h2><a href="profile.html">个人简介</a></h2>
+        <p>了解我的背景和兴趣爱好</p>
+      </section>
+      <section>
+        <h2><a href="blog.html">博客</a></h2>
+        <p>记录技术成长，分享心得</p>
+      </section>
+      <section>
+        <h2><a href="projects.html">项目经历</a></h2>
+        <p>在此展示我的项目和成果</p>
+      </section>
+      <section>
+        <h2><a href="knowledge.html">知识分享</a></h2>
+        <p>在此分享实用的编程技巧和资源</p>
+      </section>
+    </main>
+  </body>
 </html>
