优化其他界面的头像显示问题

--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
       <div class="content">
         <h1 class="fade-in">welcome</h1>
         <div>
-          <img
-            src="img/7b4946b3757727a88d4d1806f4bb6983.png"
-            alt="头像"
-            class="fade-in-delay-1"
-          />
+          <img src="img/头像.webp" alt="头像" class="fade-in-delay-1" />
           <p class="nickname">@linkones</p>
         </div>
         <div>code | input | output</div>
