--- a/main.html
+++ b/main.html
@@ -17,12 +17,8 @@
           <li><a href="knowledge.html">知识分享</a></li>
         </ul>
       </nav>
-      <div class="header-left">
-        <img
-          src="img/7b4946b3757727a88d4d1806f4bb6983.png"
-          alt="头像"
-          class="avatar"
-        />
+      <div class="header-right">
+        <img src="img/头像.webp" right alt="头像" class="avatar" />
         <span class="nickname">linkones</span>
       </div>
     </header>
