--- a/profile.html
+++ b/profile.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>个人简介</title>
-  <link rel="stylesheet" href="main.css">
-</head>
-<body>
-<header>
-  <div class="header-left">
-    <a href="main.html" class="back-btn">← 返回</a>
-    <img src="images/avatar.jpg" alt="头像" class="avatar">
-    <span class="nickname">Linkones</span>
-  </div>
-  <nav class="navbar">
-    <ul>
-      <li><a href="profile.html" class="active">个人简介</a></li>
-      <li><a href="blog.html">博客</a></li>
-      <li><a href="projects.html">项目经历</a></li>
-      <li><a href="knowledge.html">知识分享</a></li>
-    </ul>
-  </nav>
-</header>
-<main>
-  <h2>个人简介</h2>
-  <p>本人来自西南民族大学计算机科学与技术专业，目前正在学习前端开发</p>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>个人简介</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <header>
+      <div class="header-left">
+        <a href="main.html" class="back-btn">← 返回</a>
+        <img src="img/头像.webp" alt="头像" class="avatar" />
+        <span class="nickname">Linkones</span>
+      </div>
+      <nav class="navbar">
+        <ul>
+          <li><a href="profile.html" class="active">个人简介</a></li>
+          <li><a href="blog.html">博客</a></li>
+          <li><a href="projects.html">项目经历</a></li>
+          <li><a href="knowledge.html">知识分享</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h2>个人简介</h2>
+      <p>本人来自西南民族大学计算机科学与技术专业喵！！！</p>
+    </main>
+  </body>
 </html>
