--- a/projects.html
+++ b/projects.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>项目经历</title>
-  <link rel="stylesheet" href="main.css">
-</head>
-<body>
-<header>
-  <div class="header-left">
-    <a href="main.html" class="back-btn">← 返回</a>
-    <img src="images/avatar.jpg" alt="头像" class="avatar">
-    <span class="nickname">Linkones</span>
-  </div>
-  <nav class="navbar">
-    <ul>
-      <li><a href="profile.html">个人简介</a></li>
-      <li><a href="blog.html">博客</a></li>
-      <li><a href="projects.html" class="active">项目经历</a></li>
-      <li><a href="knowledge.html">知识分享</a></li>
-    </ul>
-  </nav>
-</header>
-<main>
-  <h2>项目经历</h2>
-  <div class="timeline">
-    <div class="timeline-item">
-      <h3>2024 - 智链绿循平台开发</h3>
-      <p>基于AI与区块链的社区废旧锂电池回收项目。</p>
-    </div>
-    <div class="timeline-item">
-      <h3>2023 - 个人网站搭建</h3>
-      <p>完成一个苹果风个人网站，展示作品与博客。</p>
-    </div>
-  </div>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>项目经历</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <header>
+      <div class="header-left">
+        <a href="main.html" class="back-btn">← 返回</a>
+        <img src="img/头像.webp" alt="头像" class="avatar" />
+        <span class="nickname">Linkones</span>
+      </div>
+      <nav class="navbar">
+        <ul>
+          <li><a href="profile.html">个人简介</a></li>
+          <li><a href="blog.html">博客</a></li>
+          <li><a href="projects.html" class="active">项目经历</a></li>
+          <li><a href="knowledge.html">知识分享</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h2>项目经历</h2>
+      <div class="timeline">
+        <div class="timeline-item">
+          <h3>2024 - 智链绿循平台开发</h3>
+          <p>基于AI与区块链的社区废旧锂电池回收项目。</p>
+        </div>
+        <div class="timeline-item">
+          <h3>2023 - 个人网站搭建</h3>
+          <p>完成一个苹果风个人网站，展示作品与博客。</p>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
