--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <header>
       <div class="header-left">
         <a href="main.html" class="back-btn">← 返回</a>
-        <img src="images/avatar.jpg" alt="头像" class="avatar" />
+        <img src="img/头像.webp" alt="头像" class="avatar" />
         <span class="nickname">Linkones</span>
       </div>
       <nav class="navbar">
