--- a/main.html
+++ b/main.html
@@ -8,36 +8,58 @@
   </head>
   <body>
     <header>
-      <a href="index.html" class="back-btn">← 返回</a>
+      <div class="header-left">
+        <a href="main.html" class="back-btn">← 返回</a>
+        <img src="img/头像.webp" alt="头像" class="avatar" />
+        <span class="nickname">Linkones</span>
+      </div>
       <nav class="navbar">
         <ul>
           <li><a href="profile.html">个人简介</a></li>
-          <li><a href="blog.html">博客</a></li>
+          <li><a href="blog.html" class="active">博客</a></li>
           <li><a href="projects.html">项目经历</a></li>
           <li><a href="knowledge.html">知识分享</a></li>
         </ul>
       </nav>
-      <div class="header-right">
-        <img src="img/头像.webp" right alt="头像" class="avatar" />
-        <span class="nickname">linkones</span>
-      </div>
     </header>
 
     <main>
       <section>
-        <h2><a href="profile.html">个人简介</a></h2>
-        <p>了解我的背景和兴趣爱好</p>
+        <div>
+          <h2>
+            <img src="img/个人.webp" alt="个人简介" class="project-img" /><a
+              href="profile.html"
+              >个人简介</a
+            >
+          </h2>
+          <p>了解我的背景和兴趣爱好</p>
+        </div>
       </section>
       <section>
-        <h2><a href="blog.html">博客</a></h2>
+        <h2>
+          <img src="img/博客.webp" alt="博客" class="blog-img" /><a
+            href="blog.html"
+            >博客</a
+          >
+        </h2>
         <p>记录技术成长，分享心得</p>
       </section>
       <section>
-        <h2><a href="projects.html">项目经历</a></h2>
+        <h2>
+          <img src="img/项目经历.webp" alt="项目经历" class="project-img" /><a
+            href="projects.html"
+            >项目经历</a
+          >
+        </h2>
         <p>在此展示我的项目和成果</p>
       </section>
       <section>
-        <h2><a href="knowledge.html">知识分享</a></h2>
+        <h2>
+          <img src="img/知识分享.webp" alt="知识分享" class="knowledge-img" /><a
+            href="knowledge.html"
+            >知识分享</a
+          >
+        </h2>
         <p>在此分享实用的编程技巧和资源</p>
       </section>
     </main>
