添加首页标题打字机效果

--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>欢迎页</title>
+    <title><img src="img/头像.webp" alt="头像" />linkones</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="overlay">
       <div class="content">
-        <h1 class="fade-in">welcome</h1>
+        <h1 class="fade-in"></h1>
         <div>
           <img src="img/头像.webp" alt="头像" class="fade-in-delay-1" />
           <p class="nickname">@linkones</p>
         </div>
-        <div>code | input | output</div>
+        <div class="code">code | input | output</div>
         <a href="main.html" class="btn fade-in delay-2">立即进入</a>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
