--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="header-left">
-        <a href="main.html" class="back-btn">← 返回</a>
+        <a href="index.html" class="back-btn">← 返回</a>
         <img src="img/头像.webp" alt="头像" class="avatar" />
         <span class="nickname">Linkones</span>
       </div>
