--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>项目经历</title>
+    <title>经历</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -23,15 +23,15 @@
       </nav>
     </header>
     <main>
-      <h2>项目经历</h2>
+      <h2>经历</h2>
       <div class="timeline">
         <div class="timeline-item">
-          <h3>2024 - 智链绿循平台开发</h3>
-          <p>基于AI与区块链的社区废旧锂电池回收项目。</p>
+          <h3>2025</h3>
+          <p>未完待续...</p>
         </div>
         <div class="timeline-item">
-          <h3>2023 - 个人网站搭建</h3>
-          <p>完成一个苹果风个人网站，展示作品与博客。</p>
+          <h3>2024</h3>
+          <p>敬请期待...</p>
         </div>
       </div>
     </main>
