--- a/knowledge.html
+++ b/knowledge.html
@@ -25,6 +25,16 @@
     <main>
       <h2>知识分享</h2>
       <p>在这里分享编程知识、实用技巧和经验总结。</p>
+      <div class="knowledge-container">
+        <div class="knowledge">
+          <h3>如何从0开始学习web前端开发</h3>
+          <p>不好意思，煮包自己还没学会...</p>
+        </div>
+        <div class="knowledge">
+          <h3>前端开发工具推荐</h3>
+          <p>VSCode、Chrome Developer Tools</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
