--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="profile.html">个人简介</a></li>
           <li><a href="blog.html" class="active">博客</a></li>
-          <li><a href="projects.html">项目经历</a></li>
+          <li><a href="projects.html">经历</a></li>
           <li><a href="knowledge.html">知识分享</a></li>
         </ul>
       </nav>
