--- a/blog.html
+++ b/blog.html
@@ -26,19 +26,14 @@
       <h2>博客</h2>
       <div class="blog-container">
         <div class="blog-card">
-          <img src="images/blog1.jpg" alt="文章1" />
+          <!-- <img src="images/blog1.jpg" alt="文章1" /> -->
           <h3>如何快速搭建个人网站</h3>
           <p>介绍从零开始搭建简约风格个人网站的方法。</p>
         </div>
         <div class="blog-card">
-          <img src="images/blog2.jpg" alt="文章2" />
+          <!-- <img src="images/blog2.jpg" alt="文章2" /> -->
           <h3>CSS动画让页面更生动</h3>
           <p>探索淡入、放大等动画效果在UI中的应用。</p>
-        </div>
-        <div class="blog-card">
-          <img src="images/blog3.jpg" alt="文章3" />
-          <h3>苹果风UI设计原则</h3>
-          <p>分析iOS设计语言及其在网页中的应用。</p>
         </div>
       </div>
     </main>
