--- a/knowledge.html
+++ b/knowledge.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <h2>知识分享</h2>
-      <p>在这里分享编程知识、实用技巧和经验总结。</p>
+      <p>在这里分享编程知识、实用技巧和经验总结...</p>
       <div class="knowledge-container">
         <div class="knowledge">
           <h3>如何从0开始学习web前端开发</h3>
